Update CSS and JS files

--- a/src/index.html
+++ b/src/index.html
@@ -261,7 +261,7 @@
 	</div>
 
 	<section class="schedule-wrapper container-fluid flex justify-content-center">
-		<div class="schedul-wrapper-content row mt-5 mb-3 py-5" style="background: linear-gradient(to bottom, #d3d3d3fb, white);">
+		<div class="schedul-wrapper-content row mt-5 mb-2 py-5" style="background: linear-gradient(to bottom, #d3d3d3fb, white);">
 			<div class="col-12 col-lg-6 flex align-items-center" style="flex-direction: column;">
 				<form class="request-form flex align-items-center">
 					<p class="request-form-brand">Thông tin đặt lịch khám</p>
@@ -356,15 +356,15 @@
 		</div>
 	</section>
 
-	<section class="service flex align-items-center" style="flex-direction: column; background-image: url(./assets/photo/my-service-bg.png); width: 100%">
+	<section class="service flex align-items-center" style="flex-direction: column; background-image: url(./assets/photo/my-service-bg.png); width: 100%; padding-bottom: 40px;">
 		<p class="service-title flex justify-content-center align-items-center text-uppercase" style="flex-direction: column; font-size: xx-large; font-weight: bold; color: #0080db; margin-top: 30px;">Dịch vụ của chúng tôi</p>
 
-		<div class="content-card row flex align-items-center" style="max-width: 960px;">
+		<div class="content-card row flex align-items-center justify-content-center" style="max-width: 960px;">
 			<p class="container-sm" style="text-align: center; max-width: 696px;">
 				Bệnh Viện Đa Khoa Phạm Ngọc Thạch với trang thiết bị hệ thống hiện đại hàng đầu thế giới, cùng đội ngũ y bác sĩ nhiều năm kinh nghiệm, sẽ mang đến
 				cho khách hàng, bệnh nhân, những chẩn đoán chính xác nhất về vấn đề sức khỏe của mình!
 			</p>
-			<div id="carouselExampleIndicators2" class="carousel" style="max-width: 945px;">
+			<div id="carouselExampleIndicators2" class="carousel carousel-custom">
 				<div class="carousel-inner carousel-inner-2">
 					<div class="carousel-item carousel-item-2 active">
 						<div class="card">
