Add sticky header and scrollbar styling*** ***Update carousel scroll behavior*** ***Adjust input field layout*** ***Update service card content

--- a/src/index.html
+++ b/src/index.html
@@ -269,7 +269,7 @@
 						<input type="text" id="name" required />
 						<label for="name">Họ và tên</label>
 					</div>
-					<div style="display: flex; justify-content: space-between; gap: 5px; width: 100%;">
+					<div class="double-input" style="display: flex; justify-content: space-between; gap: 5px; width: 100%;">
 						<div class="input-field">
 							<input type="text" id="phone-number" required />
 							<label for="phone-number">Số điện thoại</label>
@@ -356,7 +356,7 @@
 		</div>
 	</section>
 
-	<section class="service flex align-items-center" style="flex-direction: column; background-image: url(./assets/photo/my-service-bg.png); width: 100%; padding-bottom: 40px;">
+	<section class="service flex align-items-center" style="flex-direction: column; background-image: url(./assets/photo/my-service-bg.png); width: 100%; padding-bottom: 40px; background-size:cover; background-attachment:fixed;">
 		<p class="service-title flex justify-content-center align-items-center text-uppercase" style="flex-direction: column; font-size: xx-large; font-weight: bold; color: #0080db; margin-top: 30px;">Dịch vụ của chúng tôi</p>
 
 		<div class="content-card row flex align-items-center justify-content-center" style="max-width: 960px;">
@@ -418,6 +418,19 @@
 							</div>
 						</div>
 					</div>
+					<div class="carousel-item carousel-item-2 ">
+						<div class="card">
+							<div class="img-wrapper">
+								<img src="./assets/photo/anh4.avif" class="card-img-top" alt="...">
+							</div>
+							<div class="card-body">
+							  	<h5 class="card-title">Dịch vụ chăm sóc sức khỏe A</h5>
+							  	<p class="card-text">Dịch vụ này mang đến rất nhiều những tư vấn hữu ích cho sức khỏe của khách hàng....Hơn nữa Khách hàng còn được trải nghiệmrất nhiều những tiện ích khác nữa...
+                            	</p>
+							  	<a href="#" class="fw-bold">Xem chi tiết</a>
+							</div>
+						</div>
+					</div>
 				</div>
 				<button class="carousel-control-prev carousel-control-prev-2" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
 				  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -435,7 +448,7 @@
 	<section class="footer-wrapper flex align-items-center justify-content-center" style="background-color: #BFDCFD; border-top: 5px solid #0d6efd; padding: 20px 0 20px 0">
 		<div class="footer row container">
 			<div>
-				<img class="img-fluid col-12" src="./assets/photo/logo.png" style="width: 200px; height: 150px;" alt="">
+				<img class="img-fluid col-12" src="./assets/photo/logo.png" style="width: 180px; height: 150px;" alt="">
 			</div>
 			<div class="col-md-6 col-lg-5">
 				<p class="text-uppercase fw-bold fx-18-cv">
