--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,19 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Bệnh viện đa khoa Phạm Ngọc Thạch</title>
-
       <script src="https://kit.fontawesome.com/bf7b127d49.js" crossorigin="anonymous"></script>
 	  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	  <!--css style sheets-->
       <link rel="stylesheet" href="./assets/css/main.css">
+	  <link rel="stylesheet" href="./assets/css/call-icon.css">
+	  <link rel="stylesheet" href="./assets/css/global-scrollbar-style.css">
+	  <link rel="stylesheet" href="./assets/css/multiple-items-carousel.css">
+	  <link rel="stylesheet" href="./assets/css/hamburger-menu-animation.css">
+	  <link rel="stylesheet" href="./assets/css/accordion-style.css">
+	  <!--queries must be placed below every other css-->
+	  <link rel="stylesheet" href="./assets/css/media-queries.css">
 	  <link rel="icon" href="./assets/photo/logo.png" type="image/png">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
@@ -509,7 +516,7 @@
 		</div>
 	</div>
 
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/form-field-animation.js"></script>
 	<script src="./assets/js/multiple-carousel.js"></script>
 
 </body>
