--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 		</div>
 	</section>	
 	<div class="d-flex justify-content-center">
-		<img src="./assets/photo/hr.png" alt="">
+		<img class="hr1" src="./assets/photo/hr.png" alt="">
 	</div>
 
 
@@ -359,7 +359,7 @@
 				</div>
 				<a href="" style="color: #4e8c39; font-weight: 600; text-decoration: underline;">Xem thêm</a>
 			</div>
-			<div class="col-12 col-lg-5 col-xl-6 flex justify-content-center" style="padding: 0;">
+			<div class="col-12 col-lg-5 col-xl-6 flex justify-content-center" style="padding: 0; width: fit-content;">
 				<img class="hospital-img img-fluid" src="./assets/photo/benhvien.png" alt="">
 			</div>
 		</div>
