--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 	</div>
 
 
-	<section class="about-us-wrapper flex align-items-center justify-content-center" style="margin-bottom: 30px;">
+	<section class="about-us-wrapper flex align-items-center justify-content-center container" style="margin-bottom: 30px;">
 		<div class="row flex justify-content-center" style="max-width: 960px;">
 			<div class="col-12 col-lg-5 col-xl-6 flex align-items-center" style="flex-wrap: wrap; max-width: 540; max-height: 288px;">
 				<p class="text-uppercase fw-bold" style="font-size:xx-large; color: #4e8c39;">Về chúng tôi</p>
@@ -359,7 +359,7 @@
 				</div>
 				<a href="" style="color: #4e8c39; font-weight: 600; text-decoration: underline;">Xem thêm</a>
 			</div>
-			<div class="col-12 col-lg-5 col-xl-6 flex justify-content-center" style="padding: 0; width: fit-content;">
+			<div class="col-12 col-lg-5 col-xl-6 flex justify-content-center hi-wrapper" style="padding: 0;">
 				<img class="hospital-img img-fluid" src="./assets/photo/benhvien.png" alt="">
 			</div>
 		</div>
